--- a/index.html
+++ b/index.html
@@ -456,15 +456,21 @@
                                       <p>River Lýsa is perfect for everyone, from beginners to seasoned anglers. It’s a family-friendly fly fishing haven and a popular spot for landing your very first catch. For experienced anglers, the river offers a technical challenge, from longer lake casting to deep river euro-nymphing. There’s something for everyone!</p>
                                     </div>
 
+                                    <div class="line-seperator"></div>
+
                                     <div class="faq-question">
                                       <h5>What do I need to bring?</h5>
                                       <p>We’ve got you covered! Our guided tours include food, water, rods, waders, flies, leaders, and, of course, an expert guide. We recommend packing warm clothing—even in the summer. Iceland’s weather is as adventurous as its landscapes.</p>
                                     </div>
 
+                                    <div class="line-seperator"></div>
+
                                     <div class="faq-question">
                                       <h5>Can I customize our tour?</h5>
-                                      <p">Absolutely! We work with top travel agencies in Iceland and can expand your adventure to include other fly fishing hotspots or exciting activities like highland trekking, snowmobiling, helicopter rides, or whatever else you can dream up. Let us know your vision, and we’ll make it happen!</p>
+                                      <p>Absolutely! We work with top travel agencies in Iceland and can expand your adventure to include other fly fishing hotspots or exciting activities like highland trekking, snowmobiling, helicopter rides, or whatever else you can dream up. Let us know your vision, and we’ll make it happen!</p>
                                     </div>
+
+                                    <div class="line-seperator"></div>
 
                                     <div class="faq-question">
                                       <h5>Are flights included?</h5>
@@ -691,14 +697,14 @@
                           </div>
 
                         <div class="form-row">
-                          <div class="form-field">
+                          <div class="form-field split">
                             <div class="input-container">
                               <label for="email">Email address</label>
                               <input type="email" id="email" name="email" placeholder="Enter your email address" required>
                             </div>
                           </div>
 
-                          <div class="form-field">
+                          <div class="form-field split">
                             <div class="input-container custom-select">
                               <label for="pickup-location">Pick-up location</label>
                               <select id="pickup-location" class="custom-select" name="pickup-location" required>
@@ -1169,29 +1175,47 @@
 
     </script>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        flatpickr("#inline-calendar", {
-          inline: true, // Display calendar inline
-          dateFormat: "Y-m-d", // Backend format
-          altInput: true, // User-friendly display format
-          altFormat: "F j, Y", // User-visible format
-          defaultDate: "2025-06-01", // Start in June 2025
-          nextArrow: `
-            <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect width="36" height="36" rx="18" transform="matrix(-1 0 0 1 36 0)" fill="#F5F5F5"/>
-              <path d="M23.0024 17.7119C22.9976 17.5264 22.9609 17.3579 22.8926 17.2065C22.8242 17.0503 22.7168 16.8989 22.5703 16.7524L17.0332 11.3325C16.8086 11.1128 16.5376 11.0029 16.2202 11.0029C16.0054 11.0029 15.8101 11.0566 15.6343 11.1641C15.4536 11.2666 15.3096 11.4058 15.2021 11.5815C15.0947 11.7573 15.041 11.9526 15.041 12.1675C15.041 12.4946 15.168 12.7803 15.4219 13.0244L20.2485 17.7046L15.4219 22.3921C15.168 22.646 15.041 22.9341 15.041 23.2563C15.041 23.4712 15.0947 23.6665 15.2021 23.8423C15.3096 24.0181 15.4536 24.1572 15.6343 24.2598C15.8101 24.3672 16.0054 24.4209 16.2202 24.4209C16.5376 24.4209 16.8086 24.3086 17.0332 24.084L22.5703 18.6641C22.7217 18.5176 22.8315 18.3687 22.8999 18.2173C22.9683 18.061 23.0024 17.8926 23.0024 17.7119Z" fill="#2C2E2C"/>
-            </svg>
-          `,
-          prevArrow: `
-            <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect width="36" height="36" rx="18" fill="#F5F5F5"/>
-              <path d="M13.0332 17.7119C13.038 17.5264 13.0747 17.3579 13.1429 17.2065C13.2113 17.0503 13.3187 16.8989 13.4652 16.7524L18.998 11.3325C19.2226 11.1128 19.4936 11.0029 19.811 11.0029C20.0258 11.0029 20.2211 11.0566 20.3969 11.1641C20.5776 11.2666 20.7216 11.4058 20.8291 11.5815C20.9365 11.7573 20.9902 11.9526 20.9902 12.1675C20.9902 12.4946 20.8632 12.7803 20.6093 13.0244L15.775 17.7046L20.6093 22.3921C20.8632 22.646 20.9902 22.9341 20.9902 23.2563C20.9902 23.4712 20.9365 23.6665 20.8291 23.8423C20.7216 24.0181 20.5776 24.1572 20.3969 24.2598C20.2211 24.3672 20.0258 24.4209 19.811 24.4209C19.4936 24.4209 19.2226 24.3086 18.998 24.084L13.4652 18.6641C13.3138 18.5176 13.204 18.3687 13.1356 18.2173C13.0672 18.061 13.0332 17.8926 13.0332 17.7119Z" fill="#2C2E2C"/>
-            </svg>
-          `,
-        });
-      });
-    </script>
+ <script>
+     document.addEventListener("DOMContentLoaded", function () {
+         flatpickr("#inline-calendar", {
+             inline: true, // Display calendar inline
+             dateFormat: "Y-m-d", // Backend format
+             altInput: true, // User-friendly display format
+             altFormat: "F j, Y", // User-visible format
+             defaultDate: "2025-06-01", // Start in June 2025
+             disable: [
+                 function (date) {
+                     // Get the month (0 = January, 11 = December)
+                     const month = date.getMonth();
+                     // Disable dates outside June (5) to September (8)
+                     return month < 5 || month > 8;
+                 }
+             ],
+             onMonthChange: function (selectedDates, dateStr, instance) {
+                 const currentMonth = instance.currentMonth;
+                 const isDisabledMonth = currentMonth < 5 || currentMonth > 8;
+                 instance.calendarContainer.classList.toggle("grayed-out-month", isDisabledMonth);
+             },
+             onReady: function (selectedDates, dateStr, instance) {
+                 const currentMonth = instance.currentMonth;
+                 const isDisabledMonth = currentMonth < 5 || currentMonth > 8;
+                 instance.calendarContainer.classList.toggle("grayed-out-month", isDisabledMonth);
+             },
+             nextArrow: `
+                 <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                   <rect width="36" height="36" rx="18" transform="matrix(-1 0 0 1 36 0)" fill="#F5F5F5"/>
+                   <path d="M23.0024 17.7119C22.9976 17.5264 22.9609 17.3579 22.8926 17.2065C22.8242 17.0503 22.7168 16.8989 22.5703 16.7524L17.0332 11.3325C16.8086 11.1128 16.5376 11.0029 16.2202 11.0029C16.0054 11.0029 15.8101 11.0566 15.6343 11.1641C15.4536 11.2666 15.3096 11.4058 15.2021 11.5815C15.0947 11.7573 15.041 11.9526 15.041 12.1675C15.041 12.4946 15.168 12.7803 15.4219 13.0244L20.2485 17.7046L15.4219 22.3921C15.168 22.646 15.041 22.9341 15.041 23.2563C15.041 23.4712 15.0947 23.6665 15.2021 23.8423C15.3096 24.0181 15.4536 24.1572 15.6343 24.2598C15.8101 24.3672 16.0054 24.4209 16.2202 24.4209C16.5376 24.4209 16.8086 24.3086 17.0332 24.084L22.5703 18.6641C22.7217 18.5176 22.8315 18.3687 22.8999 18.2173C22.9683 18.061 23.0024 17.8926 23.0024 17.7119Z" fill="#2C2E2C"/>
+                 </svg>
+             `,
+             prevArrow: `
+                 <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                   <rect width="36" height="36" rx="18" fill="#F5F5F5"/>
+                   <path d="M13.0332 17.7119C13.038 17.5264 13.0747 17.3579 13.1429 17.2065C13.2113 17.0503 13.3187 16.8989 13.4652 16.7524L18.998 11.3325C19.2226 11.1128 19.4936 11.0029 19.811 11.0029C20.0258 11.0029 20.2211 11.0566 20.3969 11.1641C20.5776 11.2666 20.7216 11.4058 20.8291 11.5815C20.9365 11.7573 20.9902 11.9526 20.9902 12.1675C20.9902 12.4946 20.8632 12.7803 20.6093 13.0244L15.775 17.7046L20.6093 22.3921C20.8632 22.646 20.9902 22.9341 20.9902 23.2563C20.9902 23.4712 20.9365 23.6665 20.8291 23.8423C20.7216 24.0181 20.5776 24.1572 20.3969 24.2598C20.2211 24.3672 20.0258 24.4209 19.811 24.4209C19.4936 24.4209 19.2226 24.3086 18.998 24.084L13.4652 18.6641C13.3138 18.5176 13.204 18.3687 13.1356 18.2173C13.0672 18.061 13.0332 17.8926 13.0332 17.7119Z" fill="#2C2E2C"/>
+                 </svg>
+             `,
+         });
+     });
+ </script>
 
     <script type="text/javascript">
       
