--- a/reserve.html
+++ b/reserve.html
@@ -198,7 +198,7 @@
                           </div>
 
                         <div class="form-row">
-                          <div class="form-field">
+                          <div class="form-field split">
                             <div class="input-container">
                               <label for="email">Email address</label>
                               <input type="email" id="email" name="email" placeholder="Enter your email address" required>
