--- a/index.html
+++ b/index.html
@@ -160,9 +160,12 @@
                         </div>
 
                         <div class="gallery-3">
-                          <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                            <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g1-5.jpg">
+
+                          <a href="img/g1-5-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery">
+                            <img loading="lazy" class="gallery-img-last" src="img/g1-5.jpg">
                           </a>
+
+                          
                         </div>
 
 
@@ -171,6 +174,15 @@
 
                         <a href="img/g1-6-fullres.jpg" class = "glightbox hidden" data-gallery="mygallery">
                             <img loading = "lazy" src="img/g1-1.jpg">
+                        </a>
+
+                        <a href="img/gallery-1/1.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/2.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/g1-6-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/3.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                         </a>
 
 
@@ -263,30 +275,30 @@
                       <div class="gallery-row">
 
                           <div class ="gallery-1">
-                            <a href="img/g2-1.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                            <a href="img/g2-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                               <img loading = "lazy" src="img/g2-1.jpg">
                             </a>
-                            <a href="img/g1-2-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                            <a href="img/g2-2-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                               <img loading = "lazy" src="img/g2-2.jpg">
                             </a>
                           </div>
                           <div class="gallery-2">
 
                             <div class = "gallery-2-top">
-                              <a href="img/g1-3.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                              <a href="img/g2-3-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                                 <img loading = "lazy" src="img/g2-3.jpg">
                               </a>
-                              <a href="img/g1-4.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                              <a href="img/g2-4-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                                 <img loading = "lazy" src="img/g2-4.jpg">
                               </a>
 
                             </div>
                             <div class="gallery-2-bottom">
-                              <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                              <a href="img/g2-5-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                                 <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g2-5.jpg">
                               </a>
 
-                              <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                              <a href="img/g2-6-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                                 <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g2-6.jpg">
                               </a>
                             </div>
