--- a/index.html
+++ b/index.html
@@ -162,19 +162,15 @@
                         <div class="gallery-3">
 
                           <a href="img/g1-5-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery">
-                            <img loading="lazy" class="gallery-img-last" src="img/g1-5.jpg">
+                            <img loading="lazy" class="gallery-img-last gallery-hide" src="img/g1-5.jpg">
                           </a>
 
-                          
                         </div>
 
 
 
                         <!-- Hidden gallery -->
 
-                        <a href="img/g1-6-fullres.jpg" class = "glightbox hidden" data-gallery="mygallery">
-                            <img loading = "lazy" src="img/g1-1.jpg">
-                        </a>
 
                         <a href="img/gallery-1/1.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                         </a>
@@ -183,6 +179,30 @@
                         <a href="img/g1-6-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                         </a>
                         <a href="img/gallery-1/3.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/4.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/5.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/6.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/7.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/8.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/9.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/10.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/11.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/12.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/13.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/14.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/15.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                         </a>
 
 
@@ -306,11 +326,37 @@
 
                       </div>
 
-                      <div class="gallery-3">
-                        <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                          <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g2-5.jpg">
-                        </a>
-                      </div>
+
+                      <!-- Hidden gallery -->
+
+                      <a href="img/gallery-2/1.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                      </a>
+                      <a href="img/gallery-2/2.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                      </a>
+                      <a href="img/gallery-2/3.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                      </a>
+                      <a href="img/gallery-2/4.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                      </a>
+                      <a href="img/gallery-2/5.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                      </a>
+                      <a href="img/gallery-2/6.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                      </a>
+                      <a href="img/gallery-2/7.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                      </a>
+                      <a href="img/gallery-2/8.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                      </a>
+                      <a href="img/gallery-2/9.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                      </a>
+                      <a href="img/gallery-2/10.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                      </a>
+                      <a href="img/gallery-2/11.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                      </a>
+                      <a href="img/gallery-2/12.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                      </a>
+                      <a href="img/gallery-2/13.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                      </a>
+
+
 
                     </div>
 
