--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </script>
 
   <meta charset="UTF-8"> 
+  <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="style.css">
   <link rel="canonical" href="https://wildline.fishing/page-url" />
   <html lang="en">
