--- a/day-tours.html
+++ b/day-tours.html
@@ -12,13 +12,18 @@
   </script>
 
   <meta charset="UTF-8"> 
+  <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="style.css">
-  <link rel="canonical" href="https://wildline.fishing/page-url" />
+  <link rel="canonical" href="https://wildline.fishing" />
   <html lang="en">
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="apple-mobile-web-app-title" content="Your Website Name">
-  
+  <meta name="apple-mobile-web-app-title" content="Wildline">
+
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="favicon.ico" sizes="any">
+  <link rel="icon" href="favicon.ico">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
