--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta charset="UTF-8"> 
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="style.css">
-  <link rel="canonical" href="https://wildline.fishing/page-url" />
+  <link rel="canonical" href="https://wildline.fishing" />
   <html lang="en">
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
