--- a/thank-you.html
+++ b/thank-you.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
 
+  <script src="https://cdn.lrkt-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
+  <script>window.LogRocket && window.LogRocket.init('ya3mbw/wildline');</script>
+
 
   <!-- Google tag (gtag.js) event -->
   <script>
