--- a/about.html
+++ b/about.html
@@ -371,7 +371,7 @@ system from $1490 per person.">
 
                       <div class="section-7">
 
-                      	<video style = "height: 100%;"poster ="img/poster.webp"class="video-insert video-insert-2" autoplay loop muted playsinline><source src="img/video.mp4" loading="lazy" type="video/mp4"></video>
+                      	<video poster ="img/poster.webp"class="video-insert video-insert-2" autoplay loop muted playsinline><source src="img/video.mp4" loading="lazy" type="video/mp4"></video>
                         <div class="sec-7-right">
                          <span>RIVER LÝSA</span>
                           <h2 class ="white">Ready to embark on<br> an unforgettable fly<br> fishing adventure?</h2>
