--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@ system from $1490 per person.">
 
          <div class="section-7">
 
-          <video poster ="img/poster.webp"class="video-insert video-insert-2" autoplay loop muted playsinline><source src="img/video.mp4" loading="lazy" type="video/mp4"></video>
+          <video poster ="img/poster.webp"class="video-insert video-insert-2" autoplay loop muted playsinline><source src="img/char.mp4" loading="lazy" type="video/mp4"></video>
            <div class="sec-7-right">
             <span>AVAILABLE JUNE – SEPTEMBER</span>
              <h2 class ="white">Ready to embark on an unforgettable fly fishing adventure?</h2>
@@ -728,7 +728,10 @@ system from $1490 per person.">
                   
                   <!-- Add a wrapper for scrollable content -->
                   <div class="scroll-container">
+
                     <img class="form-cover" src="img/form-cover.webp">
+                    <!-- <video class = "form-cover" poster ="img/poster.webp"class="video-insert" autoplay loop muted playsinline><source src="img/char.mp4" type="video/mp4">
+                    </video> -->
 
                     <div class="form-container">
                       <h3>Reserve dates<br> for River Lýsa</h3>
