--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ system from $1490 per person.">
 
       </div>
 
-      <video poster ="img/poster.webp"class="video-insert" autoplay loop muted playsinline><source src="img/video.mp4" type="video/mp4">
+      <video poster ="img/poster.webp"class="video-insert" autoplay loop muted playsinline><source src="img/video.mp4" loading="eager" type="video/mp4">
 
       </video>
 
