--- a/reserve.html
+++ b/reserve.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
 
-  <script src="https://cdn.lrkt-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
-  <script>window.LogRocket && window.LogRocket.init('ya3mbw/wildline');</script>
+  <!-- <script src="https://cdn.lrkt-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
+  <script>window.LogRocket && window.LogRocket.init('ya3mbw/wildline');</script> -->
 
 
   <!-- Google tag (gtag.js) -->
