--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@ system from $1490 per person.">
         </h2>
 
         <div class="button-container">
-          <button class="openModal-2 day-tour-button">Reserve dates</button>
+          <button class="openModal-2 day-tour-button">Reserve now</button>
         </div>
       </div>
       
